// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resizer > Should match its default snapshot 1`] = `
<div
  class="flex max-w-full justify-end flex-col-reverse"
  data-id="sds-resizer"
>
  <div
    class="flex peer justify-center self-center hover:cursor-grab active:cursor-grabbing opacity-40 hover:opacity-100 relative z-20 flex-row mx-auto -mb-2 w-full h-2"
  >
    <div
      class="absolute"
    >
      <svg
        class="mx-auto"
        height="8"
        viewBox="0 0 10 10"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="currentColor"
          height="4"
          rx="2"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="0"
          width="32"
          x="-10"
          y="3"
        />
      </svg>
    </div>
  </div>
  <div
    class="border-solid border-transparent peer-hover:dark:border-white peer-hover:border-black border-b overflow-y-auto overflow-x-hidden"
  >
    <div>
      <!-- @slot The slot contains the content to be resized (either vertically or horizontally).  -->
      
      
    </div>
  </div>
</div>
`;

exports[`Resizer > Should match with specific props and src snapshot 1`] = `
<div
  class="flex max-w-full justify-end flex-row-reverse"
  data-id="sds-resizer"
>
  <div
    class="flex peer justify-center self-center hover:cursor-grab active:cursor-grabbing opacity-40 hover:opacity-100 relative z-20 flex-col ml-0 -mr-2 h-full w-2"
  >
    <div
      class="absolute"
    >
      <svg
        class="my-auto"
        height="64"
        viewBox="0 0 10 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="currentColor"
          height="32"
          rx="2"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="0"
          width="4"
          x="3"
          y="-10"
        />
      </svg>
    </div>
  </div>
  <div
    class="border-solid border-transparent peer-hover:dark:border-white peer-hover:border-black border-r overflow-x-auto overflow-y-hidden"
  >
    <div>
      <!-- @slot The slot contains the content to be resized (either vertically or horizontally).  -->
      
      
    </div>
  </div>
</div>
`;
